<resources>
    <string name="app_name">Play Whenever</string>
    <string name="title_activity_new">newActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="activity_log_in">Log In</string>
    <string name="sign_up_activity">Register</string>
    <string name="registered">Registration is successful!</string>
    <string name="view_users">View Users</string>
    <string name="new_user">Add A New User</string>
    <string name="loading_users">Loading users. Please wait…</string>
    <string name="save_user">Saving user…</string>
    <string name="loading_users_details">Loading users details. Please wait…</string>
    <string name="deleting_user">Deleting User…</string>
    <string name="user_name">User Name (2–128 characters)</string>
    <string name="password">Password</string>
    <string name="your_email">Email</string>
    <string name="type_your_email">Type your email</string>
    <string name="your_password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="log_in">log in</string>
    <string name="reset">Reset</string>
    <string name="password_too_long">Password too long</string>
    <string name="email_too_long">Email too long</string>
    <string name="field_required">Fierld required</string>
    <string name="email_pass_not_entered">Email or password not enetered</string>
    <string name="attepmpt_to_log_in">attempt to log in</string>
    <string name="you_are_logged_in">you are logged in\\</string>
    <string name="wrong_pass">wrong pass</string>
    <string name="incorrect_email">Incorrect Email</string>
    <string name="type_pass">Type pass</string>
    <string name="type_name">Type name</string>
    <string name="create_user">Create user</string>
    <string name="email">Email</string>
    <string name="name_too_long">Name too short</string>
    <string name="check_email_availability">checking if available</string>
    <string name="creating_user">Creating user</string>
    <string name="account_not_created">Account not created</string>
    <string name="email_not_valid">Not invalid</string>
    <string name="email_used">Email used</string>
    <string name="get_playgrounds">getting playgrounds</string>
    <string name="title">title</string>
    <string name="desc">name</string>
    <string name="getting_appointments">getting the appointments</string>
    <string name="title_activity_add_appointment">addAppointment</string>
    <string name="Location_btn">Pick Location</string>
    <string name="Latitude">Latitude</string>
    <string name="Longtitude">Longtitude</string>
    <string name="PlaygroundName">Enter playground name</string>
    <string name="CreateBtn">Create</string>
    <string name="Description">Description</string>
</resources>
