<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.radoslav.playwhenever.addAppointment"
    tools:showIn="@layout/activity_add_appointment"
    android:orientation="vertical">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Pgname_EditText"
        android:hint="@string/PlaygroundName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Latitude_EditText"
        android:hint="@string/Latitude" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Longtitude_EditText"
        android:hint="@string/Longtitude" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Location_btn"
        android:id="@+id/location_btn"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Description_EditText"
        android:lines="6"
        android:gravity="bottom"
        android:hint="@string/Description" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateBtn"
        android:id="@+id/Create_btn"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
